--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -23,6 +23,12 @@ spec:
           metricsPort: 10200
           httpServerHttpPort: 8080
           javaHome: /usr/lib/jvm/java-11-openjdk-amd64/
+          s3Connection:
+            endPoint: s3-de-central.profitbricks.com
+            accessKey: 00c6d2f2d6c0a460aab7
+            secretKey: d2WzGCD4zSYNOwAK9leXMtWP0/KcZpCbLjTg8zwf
+            sslEnabled: false
+            pathStyleAccess: true
   workers:
     roleGroups:
       default:
@@ -40,3 +46,9 @@ spec:
           metricsPort: 10201
           httpServerHttpPort: 8081
           javaHome: /usr/lib/jvm/java-11-openjdk-amd64/
+          s3Connection:
+            endPoint: s3-de-central.profitbricks.com
+            accessKey: 00c6d2f2d6c0a460aab7
+            secretKey: d2WzGCD4zSYNOwAK9leXMtWP0/KcZpCbLjTg8zwf
+            sslEnabled: false
+            pathStyleAccess: true
