--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -8,6 +8,9 @@ spec:
   hiveReference:
     namespace: default
     name: simple-derby
+  opa:
+    namespace: default
+    name: simple
   s3Connection:
     endPoint: changeme
     accessKey: changeme
