--- a/rust/operator/Cargo.toml
+++ b/rust/operator/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0-nightly"
 [dependencies]
 product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
 stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "hackathon" }
+stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
 stackable-trino-crd = { path = "../crd" }
 
