Removed the 'required' from the HTTPS port for the coordinator

--- a/deploy/config-spec/properties.yaml
+++ b/deploy/config-spec/properties.yaml
@@ -137,7 +137,7 @@ properties:
           value: "8443"
       roles:
         - name: "coordinator"
-          required: true
+          required: false
       asOfVersion: "0.0.0"
 
   - property: &queryMaxMemory
