--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -12,8 +12,10 @@ product-config = { git = "https://github.com/stackabletech/product-config.git", 
 stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "hackathon" }
 stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
 
 duplicate = "0.3.0"
+indoc = "1.0"
 k8s-openapi = { version = "0.13", default-features = false }
 kube = { version = "0.60", default-features = false, features = ["derive", "jsonpatch"] }
 schemars = "0.8"
