--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -23,10 +23,11 @@ spec:
             spec:
               properties:
                 authorization:
+                  nullable: true
                   properties:
-                    packageName:
+                    package:
                       type: string
-                    userPermissions:
+                    permissions:
                       additionalProperties:
                         properties:
                           schemas:
@@ -54,8 +55,8 @@ spec:
                         type: object
                       type: object
                   required:
-                    - packageName
-                    - userPermissions
+                    - package
+                    - permissions
                   type: object
                 coordinators:
                   properties:
@@ -457,7 +458,6 @@ spec:
                     - roleGroups
                   type: object
               required:
-                - authorization
                 - coordinators
                 - hiveReference
                 - nodeEnvironment
