--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -21,11 +21,8 @@ spec:
     roleGroups:
       default:
         selector:
-          matchExpressions:
-            - operator: In
-              key: kubernetes.io/hostname
-              values:
-                - main-1.stackable.demo
+          matchLabels:
+            kubernetes.io/os: stackable-linux
         config:
           coordinator: true
           nodeDataDir: /tmp/trino/data
@@ -91,13 +88,8 @@ spec:
     roleGroups:
       default:
         selector:
-          matchExpressions:
-            - operator: In
-              key: kubernetes.io/hostname
-              values:
-                - worker-1.stackable.demo
-                - worker-2.stackable.demo
-                - worker-3.stackable.demo
+          matchLabels:
+            kubernetes.io/os: stackable-linux
         replicas: 1
         config:
           nodeDataDir: /tmp/trino/data2
