--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0-nightly"
 
 [dependencies]
 product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
-stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "hackathon" }
+stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "main" }
 stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
 stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
