--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -8,15 +8,11 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.1.0-nightly"
 
 [dependencies]
-product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
 stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "main" }
 stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
 
 duplicate = "0.3.0"
-k8s-openapi = { version = "0.13", default-features = false }
-kube = { version = "0.60", default-features = false, features = ["derive", "jsonpatch"] }
-schemars = "0.8"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -33,5 +29,5 @@ serde_yaml = "0.8"
 
 [features]
 default = ["native-tls"]
-native-tls = ["kube/native-tls"]
-rustls-tls = ["kube/rustls-tls"]
+native-tls = ["stackable-operator/native-tls"]
+rustls-tls = ["stackable-operator/rustls-tls"]
