--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -9,19 +9,17 @@ version = "0.1.0-nightly"
 build = "build.rs"
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
 stackable-trino-crd = { path = "../crd" }
 stackable-trino-operator = { path = "../operator" }
 
 clap = "2.33"
-k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
-kube = { version = "0.60", default-features = false }
 tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
 
 [build-dependencies]
 built = { version =  "0.5", features = ["chrono", "git2"] }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
 stackable-trino-crd = { path = "../crd" }
 
 [package.metadata.deb]
