Create rego rule rules (#14)
* Copied hdfs skeleton operator and replaced all names with Trino.
Compiles

* Added stuff to get basic pod operations working.

* Fixed package and command handling.

* WIP - added product-config

* Fixed command & jvm config

* wip

* compute_files() should not put all properties in all files since trino will refuse to start.

* Added .gitignore.

* WIP - Monitoring and cluster working. No "discovery" yet.

* WIP - Monitoring and cluster working. No "discovery" yet.

* WIP - Discovery working.

* Added tests. Generating node-id. Moved CRD check to operator binary.

* Added command subcommands.

* WIP - started adding hive support.

* WIP - removed hardcoded hive configmap code

* Added packaging.

* WIP password.db gets written now

* Queries via hive and S3 working

* Added cargo deny and fixed fmt.

* Removed S3 credentials.

* Made S3Connection in the custom resource accessible globally.

* WIP pem file is written

* WIP spike: TLS is enabled and works
next: cleanup required

* WIP cleanup

* Mapped HTTPS port into CRD

* Added HTTPS port in the container builder

* formatting fix

* fixed stupid merge mistake

* Works with trino-opa-authorizer, opa operator and regorule operator.

* Fixed clippy.

* Updated cargo deny.

* WIP - Added License, CHANGELOG.md, Makefile and started with documentation.

* Added missing cli subcommands.

* Removed unwraps, extended usage doc.

* Removed the 'required' from the HTTPS port for the coordinator

* Removed commented code, changed some warn logs to debug logs.

* Update usage example.

* Use backticks for the regorule example to make antora happy.

* WIP - working version

* Cleanup and updated doc.

* Fixed cargo deny and tests.

* improved flow.

* Added test and docker ignore.

* Adapted hive dependency to main branch.

* Resolved conflicts

* Use tagged regorule-operator release

* Add dummy value 

--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -22,6 +22,42 @@ spec:
           properties:
             spec:
               properties:
+                authorization:
+                  nullable: true
+                  properties:
+                    package:
+                      type: string
+                    permissions:
+                      additionalProperties:
+                        properties:
+                          schemas:
+                            nullable: true
+                            properties:
+                              read:
+                                nullable: true
+                                type: boolean
+                              write:
+                                nullable: true
+                                type: boolean
+                            type: object
+                          tables:
+                            additionalProperties:
+                              properties:
+                                read:
+                                  nullable: true
+                                  type: boolean
+                                write:
+                                  nullable: true
+                                  type: boolean
+                              type: object
+                            nullable: true
+                            type: object
+                        type: object
+                      type: object
+                  required:
+                    - package
+                    - permissions
+                  type: object
                 coordinators:
                   properties:
                     cliOverrides:
