--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 license = "OSL-3.0"
 name = "stackable-trino-operator-binary"
 repository = "https://github.com/stackabletech/trino-operator"
-version = "0.1.0-nightly"
+version = "0.1.0"
 build = "build.rs"
 
 [dependencies]
