--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -5,21 +5,21 @@ edition = "2018"
 license = "OSL-3.0"
 name = "stackable-trino-crd"
 repository = "https://github.com/stackabletech/trino-operator"
-version = "0.2.0-nightly"
+version = "0.1.0-nightly"
 
 [dependencies]
-stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", tag = "0.1.0" }
-stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", tag = "0.4.1" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.2.0" }
+stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "adapt_to_use_docker_image" }
+stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "use_docker_image" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.4.0" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "move_bundle_to_tmp" }
 
 duplicate = "0.3.0"
 indoc = "1.0"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-strum = "0.22"
-strum_macros = "0.22"
+strum = "0.21"
+strum_macros = "0.21"
 thiserror = "1.0"
 tracing = "0.1"
 
