--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -1,35 +1,26 @@
 [package]
-authors = ["Lars Francke <lars.francke@stackable.de>"]
+authors = ["Stackable GmbH <info@stackable.de>"]
 description = "Contains the Trino CRD structs and utilities"
-edition = "2018"
+edition = "2021"
 license = "OSL-3.0"
 name = "stackable-trino-crd"
 repository = "https://github.com/stackabletech/trino-operator"
 version = "0.2.0-nightly"
 
 [dependencies]
-stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", tag = "0.2.0" }
-stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", tag = "0.5.0" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.2.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag= "0.7.0" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.3.0" }
 
 duplicate = "0.3.0"
-indoc = "1.0"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-strum = "0.21"
-strum_macros = "0.21"
+strum = "0.23"
+strum_macros = "0.23"
 thiserror = "1.0"
 tracing = "0.1"
 
 [dev-dependencies]
 indoc = "1.0"
-k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
 rstest = "0.11"
 serde_yaml = "0.8"
-
-[features]
-default = ["native-tls"]
-native-tls = ["stackable-operator/native-tls"]
-rustls-tls = ["stackable-operator/rustls-tls"]
