--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -15,6 +15,7 @@ duplicate = "0.3.0"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+snafu = "0.6"
 strum = "0.23"
 strum_macros = "0.23"
 thiserror = "1.0"
